add can bus status to base template

--- a/olaf/_internals/rest_api/templates/base.html
+++ b/olaf/_internals/rest_api/templates/base.html
@@ -21,6 +21,7 @@
       <h2>{{name}}</h2>
     </div>
     <div id="headerRight">
+      <text><span id="busChannel">vcan0</span>: <span id="busStatus">BUS_DOWN</span> | </text>
       <label for="flightMode">Flight Mode: </label>
       <input type="checkbox" id="flightMode" onclick="toggleFlightMode()"></input>
     </div>
@@ -28,4 +29,16 @@
   <div id="content">
     {% block content %}{% endblock %}
   </div>
+  <script>
+    async function updateBusStatus() {
+      const status = await getBusStatus();
+      document.getElementById("busChannel").textContent = status.channel;
+      document.getElementById("busStatus").textContent = status.status;
+    }
+
+    updateBusStatus();
+    const busInterval = setInterval(function() {
+      updateBusStatus();
+    }, 1000);
+  </script>
 {% endblock %}
