--- a/olaf/_internals/rest_api/templates/_base.html
+++ b/olaf/_internals/rest_api/templates/_base.html
@@ -107,6 +107,18 @@
       document.getElementById("flightMode").checked = obj.value;
     }
 
+    async function getBusStatus() {
+      const url = `http://${window.location.host}/bus`;
+      return await fetch(url)
+        .then(response => response.json())
+        .then(data => {
+          if (data.error !== undefined) {
+            console.error(data.error);
+          }
+          return data;
+        });
+    }
+
     getFlightMode();
   </script>
   <div id="baseContent">
