bolded bus and flight mode labels in templates

--- a/olaf/_internals/rest_api/templates/od.html
+++ b/olaf/_internals/rest_api/templates/od.html
@@ -16,6 +16,9 @@
     #variableObj, #arrayRecordObj, #varNewValueInput {
       display: none;
     }
+    label, .boldText {
+      font-weight: bold;
+    }
   </style>
   <label for="indexSelect">Index:</label>
   <select id="indexSelect"></select>
