--- a/olaf/_internals/rest_api/templates/root.html
+++ b/olaf/_internals/rest_api/templates/root.html
@@ -20,8 +20,8 @@
       <h2>{{title}}</h2>
     </div>
     <div id="headerRight">
-      <text><span id="busChannel">vcan0</span>: <span id="busStatus">BUS_DOWN</span> | </text>
-      <label for="flightMode">Flight Mode: </label>
+      <text><b><span id="busChannel">vcan0</span></b>: <span id="busStatus">BUS_DOWN</span> | </text>
+      <label for="flightMode"><b>Flight Mode</b>: </label>
       <input type="checkbox" id="flightMode" onclick="toggleFlightMode()"></input>
     </div>
   </div>
