node goes into operaitonal mode on network reset

--- a/olaf/_internals/rest_api/templates/base.html
+++ b/olaf/_internals/rest_api/templates/base.html
@@ -4,7 +4,7 @@
   <style>
     #headerGrid {
       display: grid;
-      grid-template-columns: 25% 50% 25%;
+      grid-template-columns: 35% 30% 35%;
     }
     #headerCenter {
       text-align: center;
@@ -21,7 +21,7 @@
       <h2>{{name}}</h2>
     </div>
     <div id="headerRight">
-      <text><b><span id="busChannel">vcan0</span></b>: <span id="busStatus">BUS_DOWN</span> | </text>
+      <text><b><span id="busChannel">vcan0</span></b>: <span id="busStatus">NETWORK_DOWN</span> | </text>
       <label for="flightMode"><b>Flight Mode</b>: </label>
       <input type="checkbox" id="flightMode" onclick="toggleFlightMode()"></input>
     </div>
